@@ -1,5 +1,9 @@
 2019-12-26  Jonas Avrin  <jawabiscuit@users.noreply.github.com>
 
+	* settings/setup-org.el
+	(org-todo-keywords):
+	    - Make clock history persist across sessions
+
 	* settings/setup-persp.el
 	(persp-mode):
 	    - Replace desktop
